[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prysmai"
version = "0.3.1"
description = "Prysm AI — The observability and security layer for LLM applications. Full trace capture, real-time dashboard, alerting, cost tracking, multi-provider support (OpenAI, Anthropic, Google Gemini, vLLM, Ollama), prompt injection detection, PII redaction, and content policy enforcement. One line of code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Osarenren Isorae", email = "osarenren@prysmai.io" },
]
keywords = ["llm", "observability", "ai", "monitoring", "openai", "anthropic", "gemini", "interpretability", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://prysmai.io"
Documentation = "https://prysmai.io/docs"
Repository = "https://github.com/osasisorae/prysmai-python"
Issues = "https://github.com/osasisorae/prysmai-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["prysmai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
